--- a/templates/connect.html
+++ b/templates/connect.html
@@ -11,6 +11,9 @@
         {% for h in hobbies %}
             <h1> {{h}} </h1>
         {% endfor %}
+    
+    <h1><a href="{% url 'loop' %}">click here and go to loop page</a></h1>
+
     </center>
     
 </body>
