--- a/templates/loop.html
+++ b/templates/loop.html
@@ -12,6 +12,8 @@
             <h1> {{i}} </h1>
         {% endfor %}
 
+    <h1><a href="{% url 'connect' %}">click here and go to connect page</a></h1>
+
     </center>
 
     
